@@ -804,8 +804,8 @@ static int filter_parse_one_callsignset(struct filter_t **ffp, struct filter_t *
 	/* count the number of prefixes in there.. */
 	while (*p) {
 		if (*p) ++refmax;
-		while (*p && *p != '/' && *p != ',') ++p;
-		if (*p == '/' || *p == ',') ++p;
+		while (*p && *p != '/') ++p;
+		if (*p == '/') ++p;
 	}
 	if (refmax == 0) return -1; /* No prefixes ?? */
 
@@ -824,7 +824,7 @@ static int filter_parse_one_callsignset(struct filter_t **ffp, struct filter_t *
 		memset(prefixbuf, 0, sizeof(prefixbuf));
 		i = 0;
 		wildcard = 0;
-		while (*p != 0 && *p != '/' && *p != ',') {
+		while (*p != 0 && *p != '/') {
                  	int c = *p++;
 			if (c == '*') {
 				wildcard = 1;
@@ -836,12 +836,14 @@ static int filter_parse_one_callsignset(struct filter_t **ffp, struct filter_t *
                         if (i < (CALLSIGNLEN_MAX)) {
                         	*k = c;
                                 ++k;
+                        } else {
+				return -1; // invalid input
                         }
 		}
 		*k = 0;
 		/* OK, we have one prefix part collected, scan source until next '/' */
-		if (*p != 0 && *p != '/' && *p != ',') ++p;
-		if (*p == '/' || *p == ',') ++p;
+		if (*p != 0 && *p != '/') ++p;
+		if (*p == '/') ++p;
 		/* If there is more of patterns, the loop continues.. */
 
 		/* Store the refprefix */
